--- a/zzp-generator-240411/pom.xml
+++ b/zzp-generator-240411/pom.xml
@@ -8,6 +8,13 @@
     <artifactId>zzp-generator-240411</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
+
+        <!-- https://picocli.info -->
+        <dependency>
+            <groupId>info.picocli</groupId>
+            <artifactId>picocli</artifactId>
+            <version>4.7.5</version>
+        </dependency>
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
